Creating Appointment model and initial migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:asklytics-sql-server.database.windows.net,1433;Initial Catalog=AppointmentBookingSystemWebDB;Persist Security Info=False;User ID=sqladmin;Password=Password2!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+
   "AzureServiceBus": {
     "ConnectionString": "Endpoint=sb://mytestappqueue.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=3z3d1UBdvpIPVv0E6OrF9mNJdr5bryF+A+ASbFURWb0=;EntityPath=mytestingqueue",
     "QueueName": "mytestingqueue"
